# check-if-passwort-protected

./: Cargo.toml  README.md  spin.toml
assets/: non-protected.docx  non-protected.pptx  non-protected.xlsx  protected.docx  protected.pptx  protected.xlsx
src/: lib.rs
