[package]
name = "encryption-detector"
authors = ["Thorsten Hans <thorsten.hans@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
lopdf = "0.39.0"
serde_json = "1.0.149"
spin-sdk = "5.0.0"
byteorder = "1.4.3"

[workspace]
